# test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_config.ini  build_on_windows.sh  calibration.cpp
3rd/asio/: CMakeLists.txt
3rd/pugixml/: CMakeLists.txt  pugixml.0.cmake
3rd/state_machine/: CMakeLists.txt  state_desc_begin  state_desc_end  state_machine.cpp  state_machine.hpp
3rd/utils/: CMakeLists.txt  allocator.hpp  averaging_buffer.hpp  bit_remap.hpp  bits.hpp  buffer.hpp  buffer_test.cpp  byte_order.hpp  byte_stream.hpp  container.hpp  copy_index_range.hpp  cstring.hpp  digital_denoise.hpp  enum_bitset.hpp  iterator.hpp  langcomp.hpp  math.hpp  mp_transform.hpp  pool_allocator.hpp  pp_args.cpp  pp_args.hpp  pp_arith.cpp  pp_arith.hpp  pp_for_each.cpp  pp_for_each.hpp  pp_utils.hpp  ptm.hpp  ref_counted_obj.hpp  ref_counting_ptr.hpp  ring_buffer.hpp  rodata.hpp  simple_iir_filter.hpp  static_vector.hpp  text.cpp  text.hpp  tokenizer.hpp  tokenizer_test.cpp  tuple.hpp  union_storage.hpp  utils.cmake  (+5 more)
Resource/PointCloud/: KR10_R1100_2_20260717_164553_frame_5.ply  KR10_R1100_2_20260717_164942_frame_16.ply  KR10_R1100_2_20260717_165006_frame_5.ply  KR10_R1100_2_20260717_173820_frame_4.ply  top1_point_cloud.ply
Resource/Robot/: RT_eyetohand.txt  point.txt  pos.txt
include/camera/: camera_config_dialog.h  camera_device_detail.h  camera_frame.h  camera_image_converter.h  camera_manager.h  camera_parameter.h  camera_parameter_registry.h  camera_point_cloud_converter.h  camera_service.h  camera_stream_config.h  common.hpp  mv3d_rgbd.h
include/net/: tcp_client.h
include/panel/: camera_acquisition_panel.h  camera_control_panel.h  camera_image_view.h  camera_info_panel.h  camera_parameter_panel.h  camera_pose_controller.h  cartesian_pose_panel.h  fine_adjust_control.h  flow_panel.h  joint_control_panel.h  net_panel.h  point_cloud_overlay_controller.h  point_cloud_overlay_toolbar.h  right_tool_panel.h  robot_model_config_dialog.h  robot_model_panel.h  teach_point_command_panel.h  teach_point_list_panel.h  trajectory_control_panel.h
include/point_cloud/: point_cloud_data.h  point_cloud_document.h  point_cloud_file_repository.h  point_cloud_persistence.h  point_cloud_renderer.h  point_cloud_selection.h  point_cloud_view.h  robot_base_point_cloud_builder.h
include/robot_model/: camera_pose_renderer.h  collision_index_build_service.h  collision_index_rebuild_coordinator.h  coordinate_frame_renderer.h  eye_to_hand_calibration.h  flange_axis_translation_dragger.h  flange_drag_motion_executor.h  flange_drag_update_coordinator.h  flange_interaction_controller.h  flange_orientation_dragger.h  flange_position_dragger.h  flange_transform_gizmo_renderer.h  pose_point_io.h  pose_transform.h  robot_calibration_builder.h  robot_collision_detector.h  robot_collision_service.h  robot_collision_settings.h  robot_debug_dump.h  robot_drag_performance_collector.h  robot_forward_kinematics.h  robot_inverse_kinematics.h  robot_joint_state_apply_result.h  robot_joint_state_builder.h  robot_joint_sweep.h  robot_kinematic_params.h  robot_kinematics.h  robot_mesh_loader.h  robot_model_config_loader.h  robot_model_data.h  robot_model_repository.h  robot_model_service.h  robot_model_state.h  robot_model_view.h  robot_motion_collision_guard.h  robot_part_transform.h  robot_render_controller.h  robot_scene_assembly.h  robot_simulation_state.h  robot_teach_point.h  (+12 more)
src/: main.cpp
src/camera/: camera_config_dialog.cpp  camera_device_detail.cpp  camera_frame.cpp  camera_image_converter.cpp  camera_manager.cpp  camera_parameter.cpp  camera_parameter_registry.cpp  camera_point_cloud_converter.cpp  camera_service.cpp  camera_stream_config.cpp  mv3d_rgbd.cpp
src/net/: tcp_client.cpp
src/panel/: camera_acquisition_panel.cpp  camera_control_panel.cpp  camera_image_view.cpp  camera_info_panel.cpp  camera_parameter_panel.cpp  camera_pose_controller.cpp  cartesian_pose_panel.cpp  fine_adjust_control.cpp  flow_panel.cpp  joint_control_panel.cpp  net_panel.cpp  point_cloud_overlay_controller.cpp  point_cloud_overlay_toolbar.cpp  right_tool_panel.cpp  robot_model_config_dialog.cpp  robot_model_panel.cpp  teach_point_command_panel.cpp  teach_point_list_panel.cpp  trajectory_control_panel.cpp
src/point_cloud/: point_cloud_document.cpp  point_cloud_file_repository.cpp  point_cloud_persistence.cpp  point_cloud_renderer.cpp  point_cloud_selection.cpp  point_cloud_view.cpp  robot_base_point_cloud_builder.cpp
src/robot_model/: camera_pose_renderer.cpp  collision_index_build_service.cpp  collision_index_rebuild_coordinator.cpp  coordinate_frame_renderer.cpp  eye_to_hand_calibration.cpp  flange_axis_translation_dragger.cpp  flange_drag_motion_executor.cpp  flange_drag_update_coordinator.cpp  flange_interaction_controller.cpp  flange_orientation_dragger.cpp  flange_position_dragger.cpp  flange_transform_gizmo_renderer.cpp  pose_point_io.cpp  pose_transform.cpp  robot_calibration_builder.cpp  robot_collision_detector.cpp  robot_collision_service.cpp  robot_debug_dump.cpp  robot_drag_performance_collector.cpp  robot_forward_kinematics.cpp  robot_inverse_kinematics.cpp  robot_joint_state_builder.cpp  robot_joint_sweep.cpp  robot_kinematic_params.cpp  robot_kinematics.cpp  robot_mesh_loader.cpp  robot_model_config_loader.cpp  robot_model_repository.cpp  robot_model_service.cpp  robot_model_state.cpp  robot_model_view.cpp  robot_motion_collision_guard.cpp  robot_part_transform.cpp  robot_render_controller.cpp  robot_scene_assembly.cpp  robot_simulation_state.cpp  robot_teach_point_store.cpp  robot_trajectory.cpp  robot_trajectory_io.cpp  (+8 more)
tests/: camera_device_detail_tests.cpp  camera_frame_buffer_tests.cpp  camera_image_converter_tests.cpp  camera_parameter_tests.cpp  camera_point_cloud_converter_tests.cpp  camera_stream_config_tests.cpp  point_cloud_document_tests.cpp  point_cloud_persistence_tests.cpp  point_cloud_selection_tests.cpp  robot_base_point_cloud_builder_tests.cpp  robot_collision_detector_tests.cpp  robot_kinematics_core_tests.cpp  robot_model_logic_tests.cpp  tool_coordinate_tests.cpp
(+42 files in other folders)
